--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/jomcbob/node_template#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.954.0",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "@quixo3/prisma-session-store": "^3.1.13",
